[gd_scene load_steps=13 format=2]

[ext_resource path="res://THEME.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI_Elements/originDescriptionBox.png" type="Texture" id=3]
[ext_resource path="res://UI_Elements/splashArtBox.png" type="Texture" id=4]
[ext_resource path="res://Scenes/TricksPage/TrickObject.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI_Elements/SkillBoxBorderBig.png" type="Texture" id=6]
[ext_resource path="res://Scripts/TricksPage/TricksStep.gd" type="Script" id=7]
[ext_resource path="res://Scenes/TricksPage/RuleDescriptionObject.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=20]
size = 48
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=22]
size = 36
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=23]
size = 26
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=21]
size = 26
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 2 )

[node name="TricksStep" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -40.0
margin_bottom = -88.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -458, -29 )

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.341489
anchor_top = 0.0383065
anchor_right = 1.0133
anchor_bottom = 1.01512
margin_right = -0.00012207
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TrickName" type="Label" parent="Control/TextureRect"]
unique_name_in_owner = true
anchor_left = 0.106888
anchor_top = 0.118679
anchor_right = 0.724463
anchor_bottom = 0.185759
custom_colors/font_color = Color( 0, 0.937255, 0.0823529, 1 )
custom_fonts/font = SubResource( 20 )
text = "SKILL NAME"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="Control/TextureRect"]
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.0958036
anchor_top = 0.167183
anchor_right = 0.901029
anchor_bottom = 0.21775
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RequirementsSectionLabel" type="Label" parent="Control/TextureRect"]
anchor_left = 0.110056
anchor_top = 0.189887
anchor_right = 0.300079
anchor_bottom = 0.229102
custom_colors/font_color = Color( 0, 0.937255, 0.0823529, 1 )
custom_fonts/font = SubResource( 22 )
text = "requirements_headline"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RequirementsLabel" type="Label" parent="Control/TextureRect"]
unique_name_in_owner = true
anchor_left = 0.111639
anchor_top = 0.23323
anchor_right = 0.901818
anchor_bottom = 0.332302
custom_colors/font_color = Color( 0, 0.937255, 0.0823529, 1 )
custom_fonts/font = SubResource( 22 )
text = "Agility 12+, Brawl 3+"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator3" type="HSeparator" parent="Control/TextureRect"]
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.0958036
anchor_top = 0.307534
anchor_right = 0.901029
anchor_bottom = 0.358102
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionSectionLabel" type="Label" parent="Control/TextureRect"]
anchor_left = 0.110847
anchor_top = 0.338494
anchor_right = 0.391923
anchor_bottom = 0.377709
custom_colors/font_color = Color( 0, 0.937255, 0.0823529, 1 )
custom_fonts/font = SubResource( 22 )
text = "description_headline"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionText" type="RichTextLabel" parent="Control/TextureRect"]
unique_name_in_owner = true
anchor_left = 0.110055
anchor_top = 0.406605
anchor_right = 0.505937
anchor_bottom = 0.871001
custom_colors/default_color = Color( 0, 0.937255, 0.0823529, 1 )
custom_fonts/normal_font = SubResource( 23 )
bbcode_text = "LOREM IPSUM BASTARDUM "
text = "LOREM IPSUM BASTARDUM "
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BehaviourActionContainer" type="TextureRect" parent="Control/TextureRect"]
unique_name_in_owner = true
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_left = 0.514646
anchor_top = 0.406605
anchor_right = 0.894692
anchor_bottom = 0.871002
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TextureRect/BehaviourActionContainer"]
anchor_left = 0.0208334
anchor_top = 0.0247222
anchor_right = 0.916667
anchor_bottom = 0.975555
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BehaviourActionList" type="GridContainer" parent="Control/TextureRect/BehaviourActionContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 430.0
margin_bottom = 46.0

[node name="Behaviour" parent="Control/TextureRect/BehaviourActionContainer/ScrollContainer/BehaviourActionList" instance=ExtResource( 8 )]
margin_right = 430.0
margin_bottom = 25.0
rect_min_size = Vector2( 430, 0 )

[node name="Actions" type="RichTextLabel" parent="Control/TextureRect/BehaviourActionContainer/ScrollContainer/BehaviourActionList"]
unique_name_in_owner = true
margin_top = 29.0
margin_right = 430.0
margin_bottom = 46.0
rect_min_size = Vector2( 430, 0 )
text = "Action"
fit_content_height = true

[node name="TricksListObject" type="TextureRect" parent="Control"]
anchor_left = 0.0590426
anchor_top = 0.0514113
anchor_right = 0.320212
anchor_bottom = 0.998992
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Control/TricksListObject"]
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.14053
anchor_top = 0.104773
anchor_right = 0.822811
anchor_bottom = 0.175786
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 21 )
text = "available_tricks"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="Control/TricksListObject"]
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.10998
anchor_top = 0.142553
anchor_right = 0.869654
anchor_bottom = 0.193617
margin_top = -1.52588e-05
margin_bottom = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TricksListObject"]
anchor_left = 0.10998
anchor_top = 0.176596
anchor_right = 0.843178
anchor_bottom = 0.9
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TricksList" type="GridContainer" parent="Control/TricksListObject/ScrollContainer"]
unique_name_in_owner = true
margin_right = 360.0
margin_bottom = 50.0

[node name="TrickObject" parent="Control/TricksListObject/ScrollContainer/TricksList" instance=ExtResource( 5 )]
